last-child now has a padding, and any content is truncated to 24px high with overflow hidden. When logged in, you only get message moderator link. Fixes #24

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -50,13 +50,15 @@ h1.redditname a { font-family: Georgia, Garamond, serif; font-weight: normal; }
   background:url('../images/sprites/mop-graphics.png');
   background-position: -0px -839px;
   background-repeat:no-repeat;
-  width:439px;
+  width:359px;
   height:142px;
-  padding-right: 0px;
+  padding: 0 0 0 80px;
 }
 
 .side > .spacer:last-child .sidecontentbox {
   width: 334px;
+  height:24px;
+  overflow:hidden;
 }
 
 .sidecontentbox {
